<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/frag_layout">

    <TextView
        android:id="@+id/warningLabelTextViewW"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/delete_warn"
        android:textSize="24sp"
        android:textColor="#8E1600"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/warningTextViewS"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:gravity="center"
        android:textColor="#000000"
        android:text="@string/bt_sync_warn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/warningLabelTextViewW"
        />

    <Button
        android:id="@+id/continueRegButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:background="@drawable/custom_button4"
        android:text="@string/Continue_reg"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="@+id/warningTextViewS"
        app:layout_constraintTop_toBottomOf="@+id/warningTextViewS" />

    <Button
        android:id="@+id/cancelRegButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:background="@drawable/custom_button2"
        android:text="@string/cancel_button"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/warningTextViewS"
        app:layout_constraintTop_toBottomOf="@+id/warningTextViewS" />
</androidx.constraintlayout.widget.ConstraintLayout>